# Billumy

./: Dockerfile  Dockerservice  Modelfile  Modelfile-qwen14b  Modelfile-qwen32b  Modelfile-qwenMaestro  README.md  chat.py  docker-compose.yml  entrypoint.sh  nginx-entrypoint.sh  nginx.conf.template
.github/workflows/: deploy.yml
service/: main.py  pyproject.toml
service/db/: mongo.py
service/models/: chat.py
service/routes/: chat.py
